--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-DB_HOST=''
-DB_USER=''
-DB_PASS=''
-DB_NAME=''
-PORT=''
+DB_HOST='bsbcbpflcvlvs7uwntbs-mysql.services.clever-cloud.com'
+DB_USER='uq5r4eirdenr0uoc'
+DB_PASS='xxb657wkodLLUBiOLjnq'
+DB_NAME='bsbcbpflcvlvs7uwntbs'
+PORT='3306'
