--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start":"node index.js",
-    
+    "start":"node index.js" 
+    /*"start":"nodemon index.js", esta codigo lo usamos solo para desarollo local para subirlo a un servidor solo sirve star:node
+    "dev":"node index.js"
+    */
   },
   "author": "",
   "license": "ISC",
